tests/error/03_parser_missing_brace.mire
load kioto

pub fn main: () {
    set x = 10
    if x > 5
        use dasu("hola")
}